# z80e

./: .gitignore  .gitmodules  .travis.yml  CMakeLists.txt  KEYBINDINGS.md  README.md  asic.gcda  cpu.gcda  default.nix  emscripten.config  emscripten.exports  main.c  main.h  memory.gcda  registers.gcda  runloop.c  runloop.h  test.c  test.gcda
CMake/: FindScas.cmake
core/: cpu.c  cpu.h  mmu.c  mmu.h  registers.c  registers.h
debugger/: commands.h  debugger.c  debugger.h  hooks.c  hooks.h  tui.c  tui.h
debugger/commands/: commands.c  disassemble.c  hexdump.c  on.c  ports.c  print_expression.c  print_mappings.c  print_registers.c  run.c  stack.c  stop.c  turn_on.c  unhalt.c
disassembler/: disassemble.c  disassemble.h
frontends/libz80e/: CMakeLists.txt  emscripten.config
frontends/libz80e/openti_helpers/Debugger/: Debugger.c
frontends/sdl/: CMakeLists.txt  main.c  tui.c  tui.h
frontends/test/: CMakeLists.txt  test.c
frontends/test/tests/: alu.c  arithmetic.c  block.c  control.c  debugger.c  devices.c  disassembler.c  index.c  interrupts.c  io.c  load.c  performance.c  shifts.c
frontends/tui/: CMakeLists.txt  main.c  tui.c
frontends/zex/: CMakeLists.txt  zex.c
gpl/: LICENSE
libz80e/: CMakeLists.txt
libz80e/include/z80e/core/: cpu.h  registers.h
libz80e/include/z80e/debugger/: commands.h  debugger.h  hooks.h  tui.h
libz80e/include/z80e/disassembler/: disassemble.h
libz80e/include/z80e/log/: log.h
libz80e/include/z80e/runloop/: runloop.h
libz80e/include/z80e/ti/: asic.h  memory.h
libz80e/include/z80e/ti/hardware/: flash.h  interrupts.h  keyboard.h  link.h  memorymapping.h  t6a04.h  timers.h
libz80e/include/z80e/util/: list.h  readline.h  stringop.h
libz80e/src/core/: .fuse_hidden000041d400000058  cpu.c  registers.c
libz80e/src/debugger/: debugger.c  hooks.c
libz80e/src/debugger/commands/: commands.c  disassemble.c  dump_lcd.c  hexdump.c  link.c  load_register.c  on.c  ports.c  press_key.c  print_expression.c  print_mappings.c  print_registers.c  release_key.c  run.c  stack.c  stop.c  tap_key.c  timers.c  turn_on.c  unhalt.c
libz80e/src/disassembler/: disassemble.c
libz80e/src/log/: log.c
libz80e/src/runloop/: runloop.c
libz80e/src/ti/: asic.c  memory.c
libz80e/src/ti/hardware/: flash.c  interrupts.c  keyboard.c  link.c  memorymapping.c  speed.c  status.c  t6a04.c  timers.c
libz80e/src/util/: list.c  readline.c  stringop.c
log/: log.c  log.h
shims/: shims.c  shims.h
tests/: alu.c  arithmetic.c  block.c  control.c  debugger.c  devices.c  disassembler.c  index.c  io.c  load.c  performance.c  shifts.c
ti/: asic.c  asic.h  memory.c  memory.h  ti.h
ti/hardware/: display.c  display.h  interrupts.c  keyboard.c  keyboard.h  memorymapping.c  memorymapping.h  status.c  status.h  t6a04.c
tools/: zex.c
webui/: index.html
webui/css/: custom.css
webui/js/: z80e.bind.js
